--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,22 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "commonjs",
   "main": "src/server.js",
- "scripts": {
-  "start": "node src/server.js",
-  "dev": "nodemon src/server.js"
-},
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
