--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "chart.js": "^4.4.9",
     "cytoscape": "^3.32.0",
     "cytoscape-edgehandles": "^4.0.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
+    "react-big-calendar": "^1.18.0",
     "react-chartjs-2": "^5.3.0",
     "react-cytoscapejs": "^2.0.0",
     "react-datepicker": "^8.3.0",
